--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,15 @@
 version: '3.1'
 
+networks:
+  connection:
+    driver: bridge
+
 services:
   mongo:
     image: mongo
     restart: always
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: root
-    # rever aula de network por casusa da falha de conexão
+    networks:
+      - connection
   programming-lang-display:
     image: salehkhalil33/programming-lang-display
     depends_on:
@@ -15,4 +17,6 @@ services:
     ports:
       - 8080:8080
     environment:
-      MONGODB_URL: mongodb://root:root@mongo:27017
+      MONGODB_URL: mongodb://mongo:27017
+    networks:
+      - connection
